<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="center_vertical"
        android:background="@drawable/toolbar_bg"
        android:gravity="center"
        android:theme="@style/ToolbarStyle">


        <TextView
            android:id="@+id/txt_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/pala"
            android:gravity="center_vertical"
            android:text="@string/learn_table"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/addView"
        android:layout_marginBottom="4dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_play"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="2dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/table_recycler"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                </androidx.cardview.widget.CardView>
            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/number_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

            </androidx.recyclerview.widget.RecyclerView>


        </LinearLayout>

        <Button
            android:id="@+id/btn_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/select_bg"
            android:gravity="center"
            android:text="@string/play"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/addView"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:gravity="bottom"
>
        <com.google.android.gms.ads.AdView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/mAdView"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            app:adSize="SMART_BANNER"
            android:foregroundGravity="center"
            app:adUnitId="@string/bannerads"
            >

        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
    </RelativeLayout>
</LinearLayout>